header overflow bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body{
   overflow-x: hidden;
 }
 
+.homeList{
+  margin-bottom: 1.5rem;
+}
+
 .buttonAdd{
   position: fixed;
   right: 1.5rem;
