--- a/src/Components/styles/Header.module.css
+++ b/src/Components/styles/Header.module.css
@@ -10,7 +10,7 @@
 }
 
 .container{
-  width: 540px;
+  width: 570px;
 }
 
 @media (max-width: 600px){
